plugins {
    id 'org.jetbrains.kotlin.jvm' apply false
    id 'org.jetbrains.kotlin.plugin.spring' apply false
    id 'org.jetbrains.kotlin.plugin.jpa' apply false
    id "org.jetbrains.kotlin.plugin.lombok" apply false

    id 'org.springframework.boot' apply false
    id 'io.spring.dependency-management' apply false

    id 'org.asciidoctor.convert' apply false

    id 'org.jlleitschuh.gradle.ktlint' apply false
    id 'org.jlleitschuh.gradle.ktlint-idea' apply false

    id 'com.github.johnrengelman.shadow' apply false
    id 'io.freefair.lombok' apply false
    id 'com.google.cloud.tools.jib' apply false
}

allprojects {
    group 'org.scriptonbasestar'
    version '0.0.1-SNAPSHOT'
}

apply plugin: 'base'

subprojects {
    apply plugin: 'java'
    apply plugin: 'groovy'

    apply plugin: 'org.jetbrains.kotlin.jvm'
    apply plugin: 'org.jetbrains.kotlin.plugin.spring'
    apply plugin: 'org.jetbrains.kotlin.plugin.jpa'

    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    apply plugin: 'org.asciidoctor.convert'
    apply plugin: 'com.github.johnrengelman.shadow'
//    apply plugin: 'io.freefair.lombok'

    sourceSets {
        main {
            java.srcDirs = ['src/main/code']
//            kotlin.srcDirs = ['src/main/code']
//            groovy.srcDirs = ['src/main/code']
//            *.srcDirs = []
            resources.srcDirs = ['src/main/resources']
        }
        test {
            java.srcDirs += ['src/test/code']
            kotlin.srcDirs += ['src/test/code']
            groovy.srcDirs += ['src/test/code']
            resources.srcDirs = ['src/test/resources']
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
        all*.exclude group: 'junit', module: 'junit'
    }

    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
    [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
//    compileJava {
//        options.annotationProcessorPath = configurations.annotationProcessor
//    }
//    compileKotlin {
//        kotlinOptions.jvmTarget = JavaVersion.VERSION_11
//        kotlinOptions.freeCompilerArgs = ['-Xjsr305=strict']
////        kotlinOptions.freeCompilerArgs += '-Xjsr305=strict'
//    }
//    compileTestKotlin {
//        kotlinOptions.jvmTarget = JavaVersion.VERSION_11
//        kotlinOptions.freeCompilerArgs = ['-Xjsr305=strict']
//    }

    ext {
        snippetsDir = file('build/generated-snippets')
    }


    dependencyManagement {
        imports {
            mavenBom("org.testcontainers:testcontainers-bom:${property("testcontainer_version")}")
        }
    }

    dependencies {
        implementation "org.codehaus.groovy:groovy-all:$groovy_version"
//        implementation "org.codehaus.groovy:groovy-all:${groovy.version}"
//        implementation 'org.codehaus.groovy:groovy'
//        testImplementation 'org.codehaus.groovy:groovy-test-junit5:3.0.8'

//        implementation 'org.springframework.boot:spring-boot-starter-webflux'
        implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
        implementation 'io.projectreactor.kotlin:reactor-kotlin-extensions'

        implementation 'org.jetbrains.kotlin:kotlin-reflect'
        implementation 'org.jetbrains.kotlin:kotlin-stdlib'
//    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-reactor'
        implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'

        implementation "org.apache.commons:commons-lang3:$commons_lang3"

        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
        annotationProcessor 'org.projectlombok:lombok'

        // test
        testImplementation 'org.jetbrains.kotlin:kotlin-test'
        testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
        testImplementation('org.springframework.boot:spring-boot-starter-test') {
            exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
            exclude module: 'junit'
        }
        testImplementation 'io.projectreactor:reactor-test'
        testImplementation 'org.springframework.amqp:spring-rabbit-test'
        testImplementation 'org.springframework.batch:spring-batch-test'
//        testImplementation 'org.springframework.restdocs:spring-restdocs-webtestclient'
//        testImplementation 'org.springframework.security:spring-security-test'
//        testImplementation 'org.testcontainers:junit-jupiter'
//        testImplementation 'org.testcontainers:mysql'
//        testImplementation 'org.testcontainers:rabbitmq'

        testImplementation 'com.h2database:h2'
        developmentOnly 'org.springframework.boot:spring-boot-devtools'

        testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'

        testImplementation 'org.junit.jupiter:junit-jupiter'
        testImplementation 'org.junit.jupiter:junit-jupiter-api'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    }

    test {
        useJUnitPlatform()
//        include '***Tests.*'
//        include '***.groovy'
        exclude '**Manual.*'
        exclude '**Main.*'
//        jvmArgs '--enable-preview'
        outputs.dir(snippetsDir)
    }
//    tasks.withType(Test) {
//        useJUnitPlatform()
//        jvmArgs '--enable-preview'
//    }

    asciidoctor {
        inputs.dir(snippetsDir)
        dependsOn(test)
    }

//    task initConfig(type: Copy) {
////        duplicatesStrategy = DuplicatesStrategy.INCLUDE
//        duplicatesStrategy = DuplicatesStrategy.INHERIT
//    }
}
